syntax = "proto3";


option java_multiple_files = true;
option java_package = "calcAirPoll";
option java_outer_classname = "CalculateAirPollutionServiceImpl";

package calcAirService;

// Interface exported by the server.
service AirCalcService {

  rpc calculate(CalculateRequest) returns (CalculateResponse) {}


  rpc generateRandomNumbers(RandomRequest) returns (stream NumberResponse ) {}


  rpc averageValues(stream NumberMessage) returns (CalculateResponse ) {}



}

message ConvertMessage {
	string number = 1;
	int32 fromBase = 2;
	int32 toBase = 3;
}

message ConvertResponse {
	string number  = 1;
	int32 base = 2;
}

message RandomRequest {
	int32 numbers = 1;
	int32 min = 2;
	int32 max = 3;
}


message NumberResponse {
	int32 number = 1;
}



message CalculateRequest {
  float number1 = 1;
  float number2 = 2;

  enum Operation{

  	TOTAL =0;
  	DIFFERENCE=1;
  	MULTIPLICATION=2;
  	DIVISION=3;
  }
  Operation operation = 3;
}


message CalculateResponse {
	float result = 1;
	string message = 2;
}


message NumberMessage{
	float number = 1;
}
